[doc] use shorter https://wiki.lighttpd.net/ url
and remove trailing whitespace

--- a/doc/lighttpd.8
+++ b/doc/lighttpd.8
@@ -63,7 +63,7 @@ The standard location for the configuration file.
 The standard location for the PID of the running \fBlighttpd\fP process.
 .
 .SH SEE ALSO
-Online Documentation: https://redmine.lighttpd.net/projects/lighttpd/wiki/
+Online Documentation: https://wiki.lighttpd.net/
 .PP
 spawn-fcgi(1)
 .PP
