[doc] command line -f - to read config from stdin (fixes #3286)
x-ref:
  "-f -" switch is undocumented
  https://redmine.lighttpd.net/issues/3286

--- a/doc/lighttpd.8
+++ b/doc/lighttpd.8
@@ -21,6 +21,8 @@ The following options are supported:
 .TP 8
 \fB\-f\ \fP \fIconfigfile\fP
 Load configuration file \fIconfigfile\fP.
+Optionally, use \fB\-f\ -\fP to read config from stdin;
+\fB\-f\ -\fP is incompatible with \fB\-1\fP.
 .TP 8
 \fB\-m\ \fP \fImoduledir\fP
 Use
